修改视频识别界面，添加姿态匹配功能

--- a/posenet/demos/package.json
+++ b/posenet/demos/package.json
@@ -47,6 +47,13 @@
     }
   },
   "eslintIgnore": [
-    "dist/"
-  ]
+    "dist/","frechetDistance.js",
+    "tfjs-models.posenet.match.js"
+  ],
+  "babel": {
+    "ignore": [
+    	"frechetDistance.js",
+    	"tfjs-models.posenet.match.js"
+  	]
+  }
 }
